syntax = "proto3"; 

package hello;

option go_package = "./hello";
option java_multiple_files = true;
option java_package = "com.marico.client.proto";
option java_outer_classname = "HelloProto";

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}
